# LOR-3000

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: app.yaml  prompts.yaml
scripts/: dev.sh
src/: main.py
src/api/v1/: router.py
src/api/v1/routes/: chat.py  config.py  prompts.py
src/backend/: formatter.py
src/backend/formats/: base.py  json_format.py
src/cli/: main.py
src/core/: config.py
src/echochamber/: service.py
src/memorylane/: context_injector.py
src/oven/: compiler.py  loader.py  manager.py  schemas.py
src/oven/storage/: redis_store.py
src/providers/: base.py  claude_provider.py  openai_provider.py
src/router_engine/: router.py
src/router_engine/passes/: token_budget.py
src/sentinel/: observer.py
src/threadcore/: database.py  models.py  repository.py  schemas.py
tests/: test_config_smoke.py  test_prompts_loader.py
